# aa-freight

./: .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  CHANGELOG.md  README.md  pyproject.toml  tox.ini
.github/workflows/: ci-cd.yaml
.tx/: config
freight/: __init__.py  admin.py  forms.py  helpers.py  managers.py  models.py  openapi_2025-12-16.json  openapi_2026-05-19.json  providers.py  swagger.json  tasks.py  views.py
freight/locale/: django.pot
freight/locale/de/LC_MESSAGES/: django.mo  django.po
freight/locale/en/LC_MESSAGES/: django.po
freight/locale/es/LC_MESSAGES/: django.po
freight/locale/it_IT/LC_MESSAGES/: django.po
freight/locale/ja/LC_MESSAGES/: django.po
freight/locale/ko_KR/LC_MESSAGES/: django.po
freight/locale/ru/LC_MESSAGES/: django.mo  django.po
freight/locale/uk/LC_MESSAGES/: django.po
freight/locale/zh_Hans/LC_MESSAGES/: django.po
freight/migrations/: 0003_improve_localization.py
freight/models/: contract_handlers.py  contracts.py  routes.py
freight/templates/freight/: add_location.html  calculator.html
freight/templatetags/: freight_filters.py
freight/tests/: helpers.py  test_admin.py  test_helpers.py  test_integration.py  test_managers.py  test_managers_2.py  test_managers_discord.py  test_models.py  test_tasks.py  test_views.py
freight/tests/managers/: test_managers.py  test_managers_discord.py
freight/tests/models/: test_contract_handlers.py  test_contracts.py  test_contracts_discord.py  test_routes.py
freight/tests/testdata/: factories.py  factories_2.py  helpers.py  test_factories_2.py
freight/tests/views/: test_views_1.py  test_views_2.py
testauth/: settings_core.py
testauth/settings_aa3/: local_core.py
testauth/settings_aa4/: base.py  local_core.py
